Fix nav bar spacing

--- a/app/components/NavigationBar/navigation-bar.scss
+++ b/app/components/NavigationBar/navigation-bar.scss
@@ -42,9 +42,9 @@
 
   &__desktop-container {
     display: flex;
-    width: 30%;
+    width: 35%;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 
     @include bpk-breakpoint-tablet {
       display: none;
